# JokaeroEngine

./: .gitignore  Blender FBX.txt  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: flags.cmake  sourcelist.cmake
shaders/: header.glsl  pbr.glsl
shaders/comp/: bloom_downscale.comp  bloom_upscale.comp  cluster_light_culling.comp  cmd_build.comp  cmd_reset_instance_count.comp  cmd_set_base_instance.comp  create_frustum_clusters.comp  create_point_shadowmaps.comp  frustum_culling_direct_shadows.comp  frustum_culling_point_lights.comp  frustum_culling_point_shadows.comp  frustum_culling_view.comp  gtao_denoise.comp  instance_compact.comp  instance_reset_visibility.comp  occlusion_alpha_blend_texture.comp  occlusion_culling_texture.comp  occlusion_culling_view.comp  particles_update.comp  pick_point_light.comp  sort_point_shadowmaps.comp
shaders/frag/: composite_pass.frag  crosshair.frag  debug_box.frag  debug_normals.frag  debug_point_lights.frag  default_framebuffer.frag  deferred_lighting.frag  draw_axis.frag  draw_cubemap.frag  draw_light_grid.frag  draw_texture.frag  draw_texture_csm.frag  draw_uint_texture.frag  forward_lighting.frag  forward_wboit.frag  fxaa_performance.frag  fxaa_quality.frag  gbuffer.frag  gtao.frag  hbao.frag  hbao_blur.frag  hbao_deinterleave.frag  hbao_interleave.frag  ibl_brdf_lut.frag  ibl_equirectangular_to_cubemap.frag  ibl_irradiance_convolution.frag  ibl_prefilter_environment.frag  loading_screen.frag  outline_selected.frag  outline_selected_texture.frag  particles.frag  post_processing.frag  prepass.frag  shadows_direct.frag  shadows_point.frag  show_point_light.frag  show_shadows_deferred.frag  show_shadows_forward.frag  skybox.frag
shaders/geom/: crosshair.geom  debug_normals.geom  ibl_cubemap.geom  screen_triangle.geom
shaders/ssbo/: animations.glsl  atomic_counters.glsl  boxes.glsl  cluster_lights.glsl  crosshair.glsl  debug_readback.glsl  frustum_clusters.glsl  frustum_point_lights.glsl  frustum_point_shadows.glsl  fx_boxes.glsl  fx_instances.glsl  fx_presets.glsl  indirect_cmd_draw.glsl  indirect_cmd_storage.glsl  instance_data.glsl  instance_matrix_mvp.glsl  instances.glsl  materials.glsl  matrices.glsl  pick_entity.glsl  point_lights.glsl  show_cameras.glsl  visibility.glsl
shaders/ubo/: camera.glsl  engine.glsl  frustum_culling.glsl  gtao.glsl  hbao.glsl  lighting.glsl  shadows.glsl
shaders/vert/: crosshair.vert  debug_box.vert  debug_cameras.vert  debug_normals.vert  debug_particles.vert  debug_point_lights.vert  deferred_quad.vert  draw_axis.vert  forward.vert  gbuffer.vert  ibl_cubemap.vert  outline_selected_quad.vert  outline_selected_texture.vert  particles.vert  prepass.vert  screen_triangle.vert  shadows_direct.vert  shadows_point.vert  show_point_light.vert  skybox.vert
src/: engine.cc  engine.h  events.cc  events.h  files.cc  files.h  global.h  glsl_header.cc  glsl_header.h  id_generator.cc  id_generator.h  main.cc  mem_info.cc  mem_info.h  mi_types.h  options.cc  options.h
src/app/: application.cc  application.h  ini.cc  ini.h  input.cc  input.h  main_thread.cc  main_thread.h  parameters.cc  parameters.h  task_system.cc  task_system.h
src/assets/: animation.cc  animation.h  assets.cc  assets.h  assimp_blender.h  env_texture_manager.cc  env_texture_manager.h  mesh.cc  mesh.h  model.cc  model.h  model_manager.cc  model_manager.h  particle_manager.cc  particle_manager.h  texture.cc  texture.h  texture_manager.cc  texture_manager.h
src/math/: assimp_to_glm.h  collision_types.cc  collision_types.h  fast_math.cc  fast_math.h  intersection.cc  intersection.h  random.cc  random.h  transformation.cc  transformation.h
src/opengl/: buffer_storage.h  buffer_storage.inl  fence_sync.cc  fence_sync.h  framebuffer.cc  framebuffer.h  program.cc  (+15 more)
(+57 files in other folders)
